We put some of the text blocks into strings and edited some of the page titles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,19 +10,33 @@
     <string name="makerButton">Maker</string>
     <string name="artButton">Art</string>
     <string name="booksButton">Books</string>
-    <string name="title_activity_books">BooksActivity</string>
-    <string name="title_activity_events_main">EventsMain</string>
-    <string name="title_activity_events_calandar">EventsCalandar</string>
-    <string name="title_activity_search_results">SearchResults</string>
+    <string name="events">Events</string>
+    <string name="resources">Resources</string>
+    <string name="title_activity_events_main">Events</string>
+    <string name="title_activity_events_calandar">Events Calandar</string>
+    <string name="title_activity_search_results">Search Results</string>
     <string name="title_activity_resource_category">ResourceCategory</string>
-    <string name="title_activity_add_event">AddEvent</string>
-    <string name="title_activity_add_resource">AddResource</string>
-    <string name="title_activity_reserve_rsvp">ReserveRSVP</string>
-    <string name="title_activity_school_profile">SchoolProfile</string>
-    <string name="title_activity_view_event">ViewEvent</string>
-    <string name="title_activity_view_resource">ViewResource</string>
-    <string name="title_activity_resource_main">ResourceMain</string>
+    <string name="title_activity_add_event">Add Event</string>
+    <string name="title_activity_add_resource">Add Resource</string>
+    <string name="title_activity_reserve_rsvp">Reserve RSVP</string>
+    <string name="title_activity_school_profile">School Profile</string>
+    <string name="title_activity_view_event">View Event</string>
+    <string name="title_activity_view_resource">View Resource</string>
+    <string name="title_activity_resource_main">Resources</string>
     <string name="title_activity_start_page">startPage</string>
+    <string name="add_event_page_title">Add Event</string>
+    <string name="add_event_page_event_name_hint">Event Name</string>
+    <string name="add_event_page_host_school_hint">Host School</string>
+    <string name="add_event_page_event_location_hint">Event Location</string>
+    <string name="add_event_page_event_date_hint">Event Date</string>
+    <string name="add_event_page_event_time_hint">Event Time</string>
+    <string name="add_event_page_event_cost_hint">Event Cost</string>
+    <string name="grade_levels">Grade Levels</string>
+    <string name="add_event_page_spaces_available_hint">Spaces Available</string>
+    <string name="add_event_page_rsvp_email_hint">RSVP Email Address</string>
+    <string name="add_event_page_rsvp_phone_number_hint">RSVP Phone Number</string>
+    <string name="save">Save</string>
+    <string name="add_resource">Add Resource</string>
     <array name="resource_types">
         <item>Books</item>
         <item>Art</item>
