I made it so the spinner has a prompt. It doesn't work right now, because you'd have to change the android:spinnerMode to dialog in order for it to show the prompt.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="date_available">Date Available</string>
     <string name="contact_email">Contact Email</string>
     <string name="description">Description</string>
+    <string name="chooseCategory">Choose a Category</string>
 
     <array name="resource_types">
         <item>Choose a Category</item>
